# ideenergy

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  globalomnium.sublime-project  ideenergy.sublime-project  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
globalomnium/: __init__.py  cli.py  client.py  go_types.py  mqtt.py  parsers.py  types.py
ideenergy/: __init__.py  __main__.py  cli.py  client.py  endpoints.py  ideenergy.py  mock.py  mqtt.py  parsers.py  types.py
tests/: generate-fixtures.py  test_client.py
