# https://packaging.python.org/tutorials/packaging-projects/

[project]
name = "ideenergy"
version = "2.0.1dev2"
dependencies = [
    "aiohttp <4.0,>=3.8",
    "dotenv>=0.9.9",
    "importlib-metadata; python_version >= '3.11'",
]
authors = [
  {name = "Luis López", email = "luis@cuarentaydos.com"},
]
readme = "README.md"
license-files = ["LICENSE"]
description ="Programmatic access to consumer energy consumption from https://www.i-de.es/ (Spanish energy distributor)"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[project.scripts]
ideenergy = "ideenergy.cli:main"

[project.urls]
Homepage = "https://github.com/ldotlopez/ideenergy"
Issues = "https://github.com/ldotlopez/ideenergy/issues"
Repository = "https://github.com/ldotlopez/ideenergy.git"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
files = ["ideenergy"]

[tool.pyupgrade]
addopts = "--py311-plus"

[tool.setuptools]
packages = ["ideenergy"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
]
