# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = ideenergy
version = 1.0.0-rc1
author = Luis López
author_email = luis@cuarentaydos.com
description = Interface to i-de.es energy data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ldotlopez/ideenergy
project_urls =
    Bug Tracker = https://github.com/ldotlopez/ideenergy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    ideenergy = ideenergy
packages = find:
python_requires = >=3.9
install_requires =
   aiohttp
   attrs == 21.2.0

[options.extras_require]
mqtt = paho-mqtt >= 1.6.1

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    ideenergy = ideenergy.cli:main
    ideenergy-mqtt = ideenergy.mqtt:main
