# https://packaging.python.org/tutorials/packaging-projects/

[metadata]
name = globalomnium
version = 2023.12.0
author = carlos-48
author_email = karloselmaster@gmail.com
description = Interface to globalomnium.com water data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carlos-48/globalomnium
project_urls =
    Bug Tracker = https://github.com/carlos-48/globalomnium/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    globalomnium = globalomnium
packages = find:
python_requires = >=3.9
install_requires =
   aiohttp>=3.8.0, <4

[options.extras_require]
mqtt = paho-mqtt >= 1.6.1, <2

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    globalomnium = globalomnium.cli:main
    globalomnium-mqtt = globalomnium.mqtt:main
